--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://boiling-journey-21552.herokuapp.com/"
+  "proxy": "https://floating-hamlet-98872.herokuapp.com/"
 }
